# iree

./: gemma_test.py
compiler/plugins/input/StableHLO/Conversion/: StableHLOToLinalgExt.cpp
compiler/plugins/input/StableHLO/Conversion/Preprocessing/: StableHLOToStableHLO.cpp
integrations/pjrt/src/iree_pjrt/common/: BUILD.bazel
integrations/pjrt/src/iree_pjrt/cpu/: BUILD.bazel  client.h
integrations/pjrt/src/iree_pjrt/partitioner_api/: BUILD.bazel
iree/compiler/Dialect/Flow/Transforms/: BUILD  CMakeLists.txt  Passes.cpp  Passes.h  Passes.td
iree/compiler/Dialect/Flow/Transforms/test/: BUILD  CMakeLists.txt
