# Copyright 2025 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "partitioner_api",
    hdrs = [
        "embedding_api.h",
        "loader.h"
    ],
    includes = [ "../../" ],
)

cc_library(
    name = "loader",
    hdrs = [ "embedding_api.h" ],
    srcs = [
        "loader/handle_symbols.inc",
        "loader/loader.cpp",
    ],
    includes = [ "../../" ],
    deps = [
        ":partitioner_api"
    ],
)
